--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,13 @@ click>=8.0.0
 pydantic>=2.0.0
 jinja2>=3.0.0
 
+# HTTP client (async and sync)
+httpx>=0.24.0
+requests>=2.28.0
+
+# HTML parsing
+beautifulsoup4>=4.12.0
+
 # LLM API clients (optional, choose one or both)
 # For OpenAI
 openai>=1.0.0
